# Wave-Vision

./: README.md  pyproject.toml
app/: main.py
app/camera/: CameraController.py
app/cursor/: CursorController.py
app/preferences/: PreferencesController.py
app/system/: SystemController.py
app/tracking/: TrackingController.py  TrackingParams.py  TrackingResult.py
app/ui/: UIController.py
wave-vision/database/: config.db
